--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   camera: ^0.10.5+2
   video_player: ^2.6.1
   permission_handler: ^8.3.0
+  image_picker: ^1.0.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
